--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,8 @@ body{
 .container{
     width: 100%;
     max-width: 500px;
-    min-width: 400px;
+    min-width: 500px;
+    margin: 0 460px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -68,6 +69,9 @@ header p{
     display: flex;
     justify-content: center;
     align-items: center;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+    border-radius: 10px;
+    padding: 20px;
 }
 
 .qr-code img{
