--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,7 @@ header p{
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     border: 1px solid rgba( 255, 255, 255, 0.18 );
     border-radius: 10px;
     padding: 20px;
