--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,7 @@ header p{
 }
 
 .container .qr-code{
+    position: relative;
     width: 100%;
     height: 100%;
     display: flex;
@@ -77,4 +78,10 @@ header p{
 
 .qr-code img{
     width: 200px;
+}
+
+.qr-code .download-btn{
+    position: absolute;
+    bottom: 16px;
+    right: 16px;
 }
