--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ body{
     backdrop-filter: blur( 1.5px );
     -webkit-backdrop-filter: blur( 1.5px );
     border-radius: 10px;
-    border: 1px solid rgba( 255, 255, 255, 0.18 );
+    border: 1px solid;
     padding: 20px;
     transition: all 0.3s ease-in-out;
 }
@@ -70,7 +70,7 @@ header p{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    border: 1px solid rgba( 255, 255, 255, 0.18 );
+    border: 1px solid;
     border-radius: 10px;
     padding: 20px;
     transition: all 0.3s ease-in-out;
